--- a/index.html
+++ b/index.html
@@ -202,6 +202,22 @@
             background-color: #1a1a1a;
             color: #f0f0f0;
         }
+        body.dark-mode .pgn-file-item.active,
+        body.dark-mode .game-item.active,
+        body.dark-mode .related-game-item.active {
+            border-left-color: #b24633;
+            background-color: #333;
+        }
+        body.dark-mode .move.current {
+            background-color: #b24633;
+            color: white;
+            font-weight: bold;
+            border-left: 3px solid #ffc64aff;
+        }
+        body.dark-mode .move.active {
+            background-color: #d43c39;
+            color: #e0e0e0;
+        }
         body.dark-mode .panel-section,
         body.dark-mode .right-panel,
         body.dark-mode .game-info {
